updated registration page to correct alignment of password element, and to provide user alert when finished typing in an input instead of only when submitting the form

--- a/accounts/registration.css
+++ b/accounts/registration.css
@@ -76,7 +76,8 @@ input:focus {
 }
 #showit {
     position: relative;
-    margin-left: 100px;
+    display: inline-block;
+    width: 201px;
     z-index: 200;
     font-size: 18px;
     color: #b47b31;
@@ -84,7 +85,6 @@ input:focus {
 input[type=password]:not('#upass') {
     background-color: ghostwhite;
     position: relative;
-    left: -20px;
 }
 #cb {
   transform: scale(1.4);
